# Task_2_CV

./: .gitignore  CMakeLists.txt  main.py
controllers/: canny_edge_detector_controller.py  chain_code_controller.py  greedy_snake_controller.py  hough_controller.py  main_controller.py  perimeter_area_controller.py
core/: CppModule.cp312-win_amd64.pyd  canny_core.cpp  canny_edge_detection.py  chain_code.py  greedy_snake.py  hough_circle_transform.py  hough_ellipse_transform.cpp  hough_ellipse_transform.py  hough_line_transform.cpp  hough_line_transform.py  module.cpp  perimeter _area.py
utils/: gradient_direction.py  helpers.py  hough_drawing.py  hough_utils.hpp
views/: main_window.ui  ui_main_window.py
